SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.1 - not yet released
* user interface
  - "pan to" button in waypoint dialog
  - waypoint selection screen shows last used waypoints if no filter is set
  - change the info box geometry without restarting XCSoar
  - tabbed Task dialog with icons or text on tabs per settings
* route planning
  - new optional minimum-time route planning around airspace and terrain.  
    - allows avoidance or terrain, airspace or both
    - takes final glide and cruise-climb portions of flight into account
  - Configuration in Route Planner page of settings.  
    - Feature is by default disabled.
    - See settings help text for configuration options
  - Limitations of current version:
    - does not update the final glide bar, task times etc for any obstacle deviations
    - does not handle aircraft or destination location inside airspace
    - does not allow paths with course deviations greater than 90 degrees each leg.
    - some "jumping" of the solution may be experienced as altitude/location changes.
* map
  - north arrow is automatically hidden in north-up mode
  - added configurable slope shading (off/fixed/wind/sun)
  - autozoom uses stepless zooming and has configurable upper distance bound
  - "north up" map orientation now respects "glider position offset"
    by configuring a "shifting axis", i.e.
    - shifting based on bearing to target (i.e. North orientated "target up")
    - shifting based on avg of recently flown headings
      (i.e. North orientated "track up")
  - the estimated thermal position is now used as map center during circling
  - a selection of which waypoint labels are displayed is now possible
    (All, Task & Landables, Task and None).
  - different rendering of roads based on importance (major, normal, minor)
  - a different font is used for rendering important topology labels (i.e. big cities)